# Sistema-Sincronizacion-BP

./: .gitignore  pyproject.toml
docs/: guia_configuracion_usuarios.md  guia_instalacion.md
scripts/: instalar-mac.command  instalar-rapido-mac.sh  instalar-rapido-windows.ps1  instalar-windows.bat  setup_repo.ps1  setup_repo.sh
src/bp/: __init__.py  __main__.py  cli.py
src/bp/commands/: force_unlock.py  get.py  history.py  lock.py  logs.py  push.py  revert.py  setup.py  status.py  unlock.py  web.py  who.py
src/bp/config/: auth.py  settings.py
src/bp/core/: audit.py  git_ops.py  lock_manager.py  slack.py  version_tracker.py  workspace.py
src/bp/i18n/: es.py
src/bp/utils/: display.py  errors.py  platform.py
src/bp/web/: app.py
src/bp/web/static/: app.js  style.css
src/bp/web/templates/: dashboard.html  settings.html
